# data-commons-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  deny.toml  logging.yml  pyproject.toml  wp4-flow.md
.github/workflows/: build.yml  release.yml  test.yml
crates/data-commons-mcp/: Cargo.toml  README.md
crates/data-commons-mcp/src/: main.rs  tools.rs
crates/search-api/: Cargo.toml
crates/search-api/src/: main.rs
src/: api.rs  chat.rs  error.rs  lib.rs  main.rs  mcp.rs  search.rs  utils.rs
src/data_commons_mcp/: __init__.py  config.py  logging.py  main.py  mcp_server.py  models.py  prompts.py  utils.py
src/data_commons_mcp/webapp/: index.html
src/data_commons_mcp/webapp/assets/: index-5yUT_ymU.css  index-D5Z9BqNo.js  index-DF4D6e_J.js  index-DoMWYuad.js
src/data_commons_search/: config.py  logging.py  main.py  mcp_server.py  models.py  utils.py
src/data_commons_search/webapp/: index.html
src/data_commons_search/webapp/assets/: index-CCM7FHr2.css
src/webapp/: index.html
src/webapp/assets/: index-BlxRoiq3.js  index-ByBSE2N0.css
tests/: test_components.py  test_server.py  test_server.rs  try_mcp.py
