[package]
name = "data-commons-mcp"
readme = "./README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rmcp = { version = "0.3", features = [
    "server",
    "transport-streamable-http-server",
    "transport-sse-server",
    # "transport-io",
    # "auth",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
axum = { version = "0.8", features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# reqwest = { version = "0.12", features = ["json"] }
# futures = "0.3"
# rand = { version = "0.9", features = ["std"] }
# chrono = "0.4"
# uuid = { version = "1.6", features = ["v4", "serde"] }
# schemars = { version = "1.0", optional = true }
# serde_urlencoded = "0.7"
# askama = { version = "0.14" }
# tower-http = { version = "0.6", features = ["cors"] }
# hyper = { version = "1" }
# hyper-util = { version = "0", features = ["server"] }

# [dev-dependencies]
# tokio-util = { version = "0.7", features = ["codec"] }
# tokio-stream = { version = "0.1" }
